# MetaDeveloperProfessionalCertificate

./: .gitignore  README.md
Course1-Intro/: Recipe.java  draft.html  index.html  index1.html  location.html  style.css  testtrial.py
Course2_Python/: abstract_class.py  animalfarm.py  check_imports.py  classDraft.py  class_explore.py  comprehension.py  comprehension_submission.py  dictionaries.py  donation.py  draft.py  employment.py  file_ops.py  filechanges.py  files_creating.py  files_handling.py  files_reading.py  findstring.py  funcions.py  hello_world.py  imports.py  jsongenerator.py  kwargs.py  list.py  mro_examples.py  my_calendar.py  nesting_loopings.py  oop_notes.txt  ordening_system.py  package_numpy.py  package_pandas.py  pakage_nltk.py  payment_info.py  python_args.py  python_exceptions.py  python_maps_filters.py  python_pure_function.py  python_scope.py  python_set.py  python_str.py  python_syntax.py  (+7 more)
Course3-VersionControl/: GitGitHub_notes.md
Course4-DB/: DataBases_notes.md
Course6-API/BookList/: pyproject.toml
Course6-API/BookList/booklist/: db.sqlite3
Course6-API/BookList/booklist/BookListAPI/: urls.py  views.py
Course6-API/BookList/booklist/booklist/: settings.py  urls.py
Course6-API/LittleLemon -/: pyproject.toml
Course6-API/LittleLemon -/LittleLemon/: db.sqlite3
Course6-API/LittleLemon -/LittleLemon/LittleLemon/: settings.py  urls.py
Course6-API/LittleLemon -/LittleLemon/LittleLemonAPI/: models.py  serializers.py  urls.py  views.py
Course6-API/LittleLemon -/LittleLemon/LittleLemonAPI/migrations/: 0001_initial.py
(+94 files in other folders)
